(add) straing values for english and spanish

--- a/Fragments/app/src/main/res/layout/activity_edit_profile.xml
+++ b/Fragments/app/src/main/res/layout/activity_edit_profile.xml
@@ -72,7 +72,7 @@
         android:ems="10"
         style="@style/Widget.Material3.TextInputEditText.FilledBox"
         android:inputType="text"
-        android:hint="Nombre"
+        android:hint="@string/usuario"
         android:padding="0dp"
         app:layout_constraintBottom_toTopOf="@+id/editTextText2"
         app:layout_constraintEnd_toStartOf="@+id/guideline26"
@@ -94,7 +94,7 @@
         android:ems="10"
         android:inputType="text"
         style="@style/Widget.Material3.TextInputEditText.FilledBox"
-        android:hint="Password"
+        android:hint="@string/password"
         app:endIconMode="password_toggle"
         app:layout_constraintBottom_toTopOf="@+id/editTextText4"
         app:layout_constraintEnd_toStartOf="@+id/guideline26"
@@ -138,7 +138,7 @@
         android:id="@+id/editTemasProfile"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Editar Temas"
+        android:text="@string/boton_editar_temas"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
         app:layout_constraintBottom_toTopOf="@+id/deleteBut"
@@ -152,7 +152,7 @@
         style="@style/Widget.Material3.Button.OutlinedButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Eliminar cuenta"
+        android:text="@string/boton_eliminar_cuenta"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
         app:layout_constraintBottom_toBottomOf="parent"
