--- a/Fragments/app/src/main/res/layout/activity_select_topic.xml
+++ b/Fragments/app/src/main/res/layout/activity_select_topic.xml
@@ -96,7 +96,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-
                 />
         </LinearLayout>
     </ScrollView>
@@ -104,9 +103,9 @@
 
     <Button
         android:id="@+id/buttonConfirmarTopic"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:text="Confirmar"
+        android:text="@string/boton_confirmar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/buttonCancellTopic"
         app:layout_constraintHorizontal_bias="0.5"
@@ -115,9 +114,9 @@
 
     <Button
         android:id="@+id/buttonCancellTopic"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:text="Cancelar"
+        android:text="@string/boton_cancelar"
         style="@style/Widget.Material3.Button.OutlinedButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
