--- a/Fragments/app/src/main/res/layout/fragment_publish.xml
+++ b/Fragments/app/src/main/res/layout/fragment_publish.xml
@@ -49,9 +49,9 @@
 
         <Button
             android:id="@+id/buttonPublicar"
-            android:layout_width="wrap_content"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
-            android:text="Publicar"
+            android:text="@string/boton_publicar"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/buttonCanelar"
             app:layout_constraintHorizontal_bias="0.5"
@@ -61,9 +61,9 @@
         <Button
             android:id="@+id/buttonCanelar"
             style="@style/Widget.Material3.Button.OutlinedButton"
-            android:layout_width="wrap_content"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
-            android:text="Cancelar"
+            android:text="@string/boton_cancelar"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -123,7 +123,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:hint="Título"
+            android:hint="@string/titulo"
             android:paddingLeft="50dp"
             android:paddingRight="50dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -141,7 +141,7 @@
             android:id="@+id/PublishContenido"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:hint="Contenido"
+            android:hint="@string/contenido"
             style="@style/Widget.Material3.TextInputEditText.FilledBox"
             app:layout_constraintBottom_toTopOf="@+id/guideline25"
             app:layout_constraintEnd_toStartOf="@+id/guideline21"
