--- a/Fragments/app/src/main/res/layout/activity_registro.xml
+++ b/Fragments/app/src/main/res/layout/activity_registro.xml
@@ -54,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:gravity="center"
-        android:hint="Email"
+        android:hint="@string/correo"
         android:inputType="text"
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
         app:layout_constraintStart_toStartOf="@+id/guideline7"
@@ -106,9 +106,9 @@
 
     <Button
         android:id="@+id/buttonRegistrarRegister"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:text="@string/confirmar"
+        android:text="@string/boton_confirmar"
         app:layout_constraintBottom_toTopOf="@+id/buttonCancellRegister"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -118,9 +118,9 @@
     <Button
         android:id="@+id/buttonCancellRegister"
         style="@style/Widget.Material3.Button.OutlinedButton"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:text="@string/cancelar"
+        android:text="@string/boton_cancelar"
         android:layout_marginBottom="35dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
