--- a/Fragments/app/src/main/res/layout/fragment_profile.xml
+++ b/Fragments/app/src/main/res/layout/fragment_profile.xml
@@ -32,13 +32,13 @@
             android:id="@+id/chat_fr"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Mis publicaciones" />
+            android:text="@string/mis_publicaciones" />
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/publish_fr"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Mis Likes" />
+            android:text="@string/mis_likes" />
 
 
     </com.google.android.material.tabs.TabLayout>
@@ -117,7 +117,7 @@
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_marginRight="10dp"
-        android:text="Editar Perfil"
+        android:text="@string/boton_editar_perfil"
         android:textSize="12dp"
         style="@style/Widget.Material3.Button.TonalButton"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
