--- a/Fragments/app/src/main/res/layout/activity_chat.xml
+++ b/Fragments/app/src/main/res/layout/activity_chat.xml
@@ -47,12 +47,14 @@
             android:layout_gravity="center"
             android:gravity="right"
             android:layout_weight="1"/>
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/iconChat"
             android:layout_width="50dp"
             android:layout_height="35dp"
             android:layout_gravity="center"
             android:scaleX="-1"
+            app:civ_border_width="1dp"
+            app:civ_border_color="@color/black"
             android:src="@drawable/ic_hombre"/>
 
     </LinearLayout>
