--- a/Fragments/app/src/main/res/layout/activity_comentarios.xml
+++ b/Fragments/app/src/main/res/layout/activity_comentarios.xml
@@ -65,7 +65,7 @@
             app:layout_constraintStart_toStartOf="parent"
             tools:ignore="MissingConstraints" />
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/iconUserPublish"
             android:layout_width="0dp"
             android:layout_height="55dp"
@@ -75,6 +75,8 @@
             app:layout_constraintEnd_toStartOf="@+id/titulo"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:civ_border_width="1dp"
+            app:civ_border_color="@color/black"
             tools:ignore="MissingConstraints" />
 
         <TextView
