--- a/Fragments/app/src/main/res/layout/cv_row_chatlist.xml
+++ b/Fragments/app/src/main/res/layout/cv_row_chatlist.xml
@@ -28,10 +28,12 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
-                <ImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/iconListChat"
                     android:layout_width="55dp"
                     android:layout_height="70dp"
+                    app:civ_border_width="1dp"
+                    app:civ_border_color="@color/black"
                     android:src="@drawable/ic_mujer" />
 
                 <LinearLayout
