--- a/Fragments/app/src/main/res/layout/activity_login_sign_up.xml
+++ b/Fragments/app/src/main/res/layout/activity_login_sign_up.xml
@@ -141,4 +141,22 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="91dp" />
 
+    <TextView
+        android:id="@+id/translate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="hola, ¿cómo estás?"
+        app:layout_constraintEnd_toStartOf="@+id/guideline9"
+        app:layout_constraintStart_toStartOf="@+id/guideline10"
+        app:layout_constraintTop_toTopOf="@+id/guideline18" />
+
+    <Button
+        android:id="@+id/buttonTranslate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        app:layout_constraintEnd_toStartOf="@+id/guideline9"
+        app:layout_constraintStart_toStartOf="@+id/guideline10"
+        app:layout_constraintTop_toBottomOf="@+id/translate" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
