(fixed) chats shows up, but need to identify owner's texts

--- a/Fragments/app/src/main/res/layout/activity_chat.xml
+++ b/Fragments/app/src/main/res/layout/activity_chat.xml
@@ -38,7 +38,7 @@
             android:scaleX="-1"
             android:src="@drawable/simplearrow"/>
         <TextView
-            android:id="@+id/nameTv"
+            android:id="@+id/groupName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Nombre de la otra persona"
