--- a/Fragments/app/src/main/res/layout/cv_row_chat.xml
+++ b/Fragments/app/src/main/res/layout/cv_row_chat.xml
@@ -24,6 +24,14 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:orientation="vertical">
+            <TextView
+                android:id="@+id/nombreConversacion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
+                android:textSize="10sp"
+                android:text="mensaje"
+                />
 
             <TextView
                 android:id="@+id/contenidoPublicacion"
