--- a/Fragments/app/src/main/res/values-en-rUS/english.xml
+++ b/Fragments/app/src/main/res/values-en-rUS/english.xml
@@ -22,6 +22,7 @@
     <string name="mis_likes">My likes</string>
     <string name="boton_editar_temas">Edit topics</string>
     <string name="boton_eliminar_cuenta">Delete Account</string>
+    <string name="salir_del_grupo">Exit the chat</string>
 
     <string-array name="Gender">
         <item>Male</item>
