--- a/Fragments/app/src/main/res/layout/cv_row_chatlist.xml
+++ b/Fragments/app/src/main/res/layout/cv_row_chatlist.xml
@@ -47,7 +47,7 @@
                         android:layout_height="wrap_content"
                         android:padding="5dp"
                         android:layout_marginLeft="5dp"
-                        android:text="User name"
+                        android:text="User"
                         android:textSize="20dp" />
 
                     <TextView
