--- a/Fragments/app/src/main/res/layout/cv_row_chatlist.xml
+++ b/Fragments/app/src/main/res/layout/cv_row_chatlist.xml
@@ -28,6 +28,7 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
+
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/iconListChat"
                     android:layout_width="55dp"
@@ -39,7 +40,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:layout_weight="1">
 
                     <TextView
                         android:id="@+id/personaChat"
@@ -60,7 +62,20 @@
                         android:textAlignment="center" />
                 </LinearLayout>
 
-
+                <TextView
+                    android:id="@+id/newMessage"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/circle_background"
+                    android:gravity="center"
+                    android:text="new"
+                    android:textColor="@android:color/white"
+                    android:textSize="13sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
             </LinearLayout>
 
             <TextView
