--- a/Fragments/app/src/main/res/layout/activity_edit_profile.xml
+++ b/Fragments/app/src/main/res/layout/activity_edit_profile.xml
@@ -47,12 +47,14 @@
             app:tint="@color/black" />
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/imageView4"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/fotoEditProfle"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="30dp"
         android:src="@drawable/ic_hombre"
+        app:civ_border_color="@color/black"
+        app:civ_border_width="1dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline19"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +80,7 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline26"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/guideline24"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" >
+        app:layout_constraintTop_toBottomOf="@+id/fotoEditProfle" >
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputUserNameUpdate"
