--- a/Fragments/app/src/main/res/layout/cv_row_chatlist.xml
+++ b/Fragments/app/src/main/res/layout/cv_row_chatlist.xml
@@ -64,15 +64,15 @@
 
                 <TextView
                     android:id="@+id/newMessage"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_marginRight="16dp"
                     android:layout_gravity="center"
                     android:background="@drawable/circle_background"
                     android:gravity="center"
-                    android:text="new"
+                    android:text="1"
                     android:textColor="@android:color/white"
-                    android:textSize="13sp"
+                    android:textSize="15sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
