--- a/Fragments/app/src/main/res/layout/activity_chat.xml
+++ b/Fragments/app/src/main/res/layout/activity_chat.xml
@@ -107,7 +107,7 @@
             android:layout_gravity="center"
             android:scaleX="-1"
             app:civ_border_width="1dp"
-            app:civ_border_color="@color/black"
+            app:civ_border_color="@color/md_theme_light_primary"
             android:src="@drawable/ic_hombre"/>
 
     </LinearLayout>
