--- a/Fragments/app/src/main/res/drawable/circle_background.xml
+++ b/Fragments/app/src/main/res/drawable/circle_background.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <shape xmlns:android="http://schemas.android.com/apk/res/android"
-        android:innerRadiusRatio="3"
-        android:shape="oval"
-        android:thicknessRatio="8"
-        android:useLevel="false">
-        <size
-            android:height="30dp"
-            android:width="30dp" />
-        <solid android:color="@color/md_theme_light_primary" />
-    </shape>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
+    <solid android:color="@color/seed" /> <!-- Color del círculo -->
+    <size android:width="100dp" android:height="100dp" /> <!-- Tamaño del círculo -->
+</shape>
