--- a/Fragments/app/src/main/res/layout/activity_edit_profile.xml
+++ b/Fragments/app/src/main/res/layout/activity_edit_profile.xml
@@ -8,6 +8,7 @@
     tools:context=".EditProfile">
 
 
+
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
@@ -49,15 +50,15 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/fotoEditProfle"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="30dp"
+        android:layout_width="200dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="40dp"
         android:src="@drawable/ic_hombre"
         app:civ_border_color="@color/black"
         app:civ_border_width="1dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline19"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline26"
+        app:layout_constraintStart_toStartOf="@+id/guideline24"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -177,6 +178,32 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.8" />
+
+    <FrameLayout
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginRight="20dp"
+
+        android:layout_gravity="center"
+        app:layout_constraintBottom_toBottomOf="@+id/fotoEditProfle"
+        app:layout_constraintEnd_toEndOf="@+id/fotoEditProfle"
+>
+
+        <!-- Fondo circular -->
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/circle_background"
+            android:scaleType="centerCrop" />
+
+        <!-- Imagen superpuesta -->
+        <ImageView
+            android:id="@+id/updatePicture"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/update_foto_3"
+            android:scaleType="centerCrop" />
+    </FrameLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
