--- a/Fragments/app/src/main/res/layout/activity_edit_profile.xml
+++ b/Fragments/app/src/main/res/layout/activity_edit_profile.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fondoAppEditProfile"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/fondoAppEditProfile"
     tools:context=".EditProfile">
 
 
@@ -12,37 +12,38 @@
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:background="@color/seed"
         android:orientation="horizontal"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/seed">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/backEditProfile"
             android:layout_width="40dp"
             android:layout_height="match_parent"
             android:padding="7dp"
-            android:src="@drawable/ic_back"/>
+            android:src="@drawable/ic_back" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:padding="7dp"
-            android:text="@string/app_name"
-            android:textStyle="bold"
+            android:layout_weight="1"
             android:fontFamily="@font/caviardreams"
             android:gravity="center"
-            android:layout_weight="1"
-            android:textSize="25sp"/>
+            android:padding="7dp"
+            android:text="@string/app_name"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/check"
             android:layout_width="40dp"
             android:layout_height="match_parent"
-            android:padding="4dp"
             android:layout_weight="0"
+            android:padding="4dp"
             android:src="@drawable/check"
             app:tint="@color/black" />
     </LinearLayout>
@@ -69,18 +70,18 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/editTextText"
+        style="@style/Widget.Material3.TextInputEditText.FilledBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ems="10"
-        style="@style/Widget.Material3.TextInputEditText.FilledBox"
-        android:inputType="text"
         android:hint="@string/usuario"
+        android:inputType="text"
         android:padding="0dp"
         app:layout_constraintBottom_toTopOf="@+id/editTextText2"
         app:layout_constraintEnd_toStartOf="@+id/guideline26"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/guideline24"
-        app:layout_constraintTop_toBottomOf="@+id/fotoEditProfle" >
+        app:layout_constraintTop_toBottomOf="@+id/fotoEditProfle">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputUserNameUpdate"
@@ -90,60 +91,62 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/editTextText2"
+        style="@style/Widget.Material3.TextInputEditText.FilledBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:padding="0dp"
         android:ems="10"
-        android:inputType="text"
-        style="@style/Widget.Material3.TextInputEditText.FilledBox"
         android:hint="@string/password"
+        android:inputType="text"
+        android:padding="0dp"
         app:endIconMode="password_toggle"
         app:layout_constraintBottom_toTopOf="@+id/editTextText4"
         app:layout_constraintEnd_toStartOf="@+id/guideline26"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/guideline24"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText" >
+        app:layout_constraintTop_toBottomOf="@+id/editTextText">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputPasswordUpdate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"/>
+            android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/editTextText4"
+        style="@style/Widget.Material3.TextInputEditText.FilledBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@null"
         android:ems="10"
-        style="@style/Widget.Material3.TextInputEditText.FilledBox"
-        android:padding="0dp"
         android:gravity="center"
         android:inputType="text"
+        android:maxHeight="150dp"
+        android:padding="0dp"
         android:text="Descripcion"
+        app:counterEnabled="true"
+        app:counterMaxLength="200"
         app:layout_constraintBottom_toTopOf="@+id/editTemasProfile"
         app:layout_constraintEnd_toStartOf="@+id/guideline26"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/guideline24"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
-        app:counterEnabled="true"
-        app:counterMaxLength="200"
-        android:maxHeight="150dp">
+        app:layout_constraintTop_toBottomOf="@+id/editTextText2">
+
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputDescripcionUpdate"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:scrollbars="vertical"/>
+            android:scrollbars="vertical" />
     </com.google.android.material.textfield.TextInputLayout>
+
     <Button
         android:id="@+id/editTemasProfile"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/boton_editar_temas"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
-        app:layout_constraintBottom_toTopOf="@+id/deleteBut"
+        android:text="@string/boton_editar_temas"
+        app:layout_constraintBottom_toTopOf="@+id/logOutBut"
         app:layout_constraintEnd_toStartOf="@+id/guideline26"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/guideline24"
@@ -154,15 +157,29 @@
         style="@style/Widget.Material3.Button.OutlinedButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/boton_eliminar_cuenta"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
+        android:text="@string/boton_eliminar_cuenta"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline26"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/guideline24"
-        app:layout_constraintTop_toBottomOf="@+id/editTemasProfile" />
+        app:layout_constraintTop_toBottomOf="@+id/logOutBut" />
 
+
+    <Button
+        android:id="@+id/logOutBut"
+        style="@style/Widget.Material3.Button.OutlinedButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp"
+        android:text="Cerrar sesion"
+        app:layout_constraintBottom_toTopOf="@+id/deleteBut"
+        app:layout_constraintEnd_toStartOf="@+id/guideline26"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline24"
+        app:layout_constraintTop_toBottomOf="@+id/editTemasProfile" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline24"
