--- a/Fragments/app/src/main/res/layout/activity_edit_profile.xml
+++ b/Fragments/app/src/main/res/layout/activity_edit_profile.xml
@@ -27,25 +27,18 @@
             android:layout_height="match_parent"
             android:padding="7dp"
             android:src="@drawable/ic_back"/>
+
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/tituloEditProfile"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:padding="7dp"
-            android:text="@string/app_name"
-            android:textStyle="bold"
+            android:layout_weight="1"
             android:fontFamily="@font/caviardreams"
             android:gravity="center"
-            android:layout_weight="1"
-            android:textSize="25sp"/>
+            android:text="@string/app_name"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/check"
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:padding="4dp"
-            android:layout_weight="0"
-            android:src="@drawable/check"
-            app:tint="@color/black" />
     </LinearLayout>
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -156,6 +149,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/boton_eliminar_cuenta"
+        android:textColor="@color/button_Cancelar"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -163,6 +157,34 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/guideline24"
         app:layout_constraintTop_toBottomOf="@+id/editTemasProfile" />
+    <Button
+        android:id="@+id/buttonCancellUpdates"
+        style="@style/Widget.Material3.Button.OutlinedButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/boton_cancelar"
+        android:visibility="invisible"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline26"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/guideline24"
+        app:layout_constraintTop_toBottomOf="@+id/editTemasProfile" />
+
+    <Button
+        android:id="@+id/buttonConfirmarUpdates"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp"
+        android:text="@string/boton_confirmar"
+        app:layout_constraintBottom_toTopOf="@+id/deleteBut"
+        app:layout_constraintEnd_toStartOf="@+id/guideline26"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/guideline24"
+        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />
 
 
     <androidx.constraintlayout.widget.Guideline
@@ -182,7 +204,7 @@
     <FrameLayout
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginEnd="20dp"
 
         android:layout_gravity="center"
         app:layout_constraintBottom_toBottomOf="@+id/fotoEditProfle"
