--- a/Fragments/app/src/main/res/values-en-rUS/english.xml
+++ b/Fragments/app/src/main/res/values-en-rUS/english.xml
@@ -11,6 +11,7 @@
     <string name="resgistro_mensaje">Select the topics you like</string>
     <string name="boton_iniciar_sesion" >Log in</string>
     <string name="boton_resgistrarse" >Sign up</string>
+    <string name="boton_cerrar_sesion" >Log out</string>
 
     <string name="mis_temas">My topics</string>
     <string name="tendencias">Trends</string>
