--- a/ForoEx_App/app/src/main/res/layout/cv_row_usuario.xml
+++ b/ForoEx_App/app/src/main/res/layout/cv_row_usuario.xml
@@ -16,11 +16,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/fotoUsuario"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center"
+            app:civ_border_width="1dp"
+            app:civ_border_color="@color/black"
             android:padding="5dp"
             android:layout_marginLeft="30dp"/>
 
